# django-pwa-batteries

./: LICENSE.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
pwa_batteries/: __init__.py  apps.py  urls.py  views.py
pwa_batteries/static/pwa_batteries/: pwa_batteries.js
pwa_batteries/templates/pwa_batteries/: pwa_batteries.js  serviceworker.js
