[tool.poetry]
name = "django-pwa-batteries"
version = "0.1"
license = "MIT"
authors = []
description = "Move logic to frontend"
readme = "README.md"
repository = "https://github.com/devkral/django-pwa-batteries"
classifiers=[
      'Environment :: Web Environment',
      'Framework :: Django',
      'Framework :: Django :: 1.11',
      'Framework :: Django :: 2.0',
      'Intended Audience :: Developers',
      'License :: OSI Approved :: MIT License',
      'Operating System :: OS Independent',
      'Programming Language :: Python',
      'Programming Language :: Python :: 3',
      'Programming Language :: Python :: 3.5',
      'Programming Language :: Python :: 3.6',
      'Topic :: Internet :: WWW/HTTP',
      'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  ]

[tool.poetry.dependencies]
python = ">=3.5"

django = ">=1.11"
django-pwa = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
